Aug. 30 2011
Use delayed queue for sprite destruction.
Use separated collition detection.

Aug. 25 2011
Implemented basic board logic.

Aug. 11 2011
Added sprite removing callback.

Aug. 8 2011
Some artworks.

Jul. 25 2011
Bitfsm in pure-C.
Logo, main menu.

Jul. 9 2011
Collision detection.

Jul. 6 2011
Named frame.

Jul. 5 2011
Basic animation on named frames.

Jul. 3 2011
Rendering.
Basic animating.

Jun. 26 2011
Canvas, Sprite etc.
Controller interface.
Message system.
Main loop logic.
Basic render flow.

Jun. 14 2011
Project started.