@@ -1,4 +1,5 @@
 SET_FOOT_BRUSH("9")
+
 SET_FRAME_RATE(40)
 
 KC_UP = 0
@@ -13,3 +14,12 @@ REG_KEY(0, KC_LEFT, 75)
 REG_KEY(0, KC_RIGHT, 77)
 REG_KEY(0, KC_OK, 13)
 REG_KEY(0, KC_ESC, 27)
+
+AHAT_LOGO = 0
+AHAT_TICK = 1
+AHAT_COLLIDE = 2
+AHAT_GAME_OVER = 3
+SET_AUDIO_STRING(AHAT_LOGO, "DEDEC>A<C>A<EDEDEC>A<C>A<EPPPP")
+SET_AUDIO_STRING(AHAT_TICK, "<C")
+SET_AUDIO_STRING(AHAT_COLLIDE, ">C")
+SET_AUDIO_STRING(AHAT_GAME_OVER, "FAEPEEDDCC")
