@@ -1,1 +1,1 @@
-SET_CVS_S32_PARAM("HIGH_SCORE", 14)
+SET_CVS_S32_PARAM("HIGH_SCORE", 0)
